--- a/backend/package.json
+++ b/backend/package.json
@@ -5,21 +5,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3",
+    "peer": "^1.0.2",
+    "socket.io-client": "^4.7.4"
+  },
   "dependencies": {
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.3",
-    "socket.io-client": "^4.7.4"
   }
 }
