--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "socket.io-client": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.3.2",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   }
